--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,9 @@
 {
   "license": "MIT",
+  "scripts": {
+    "serve": "tsc && node dist/server.js",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+  },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
